--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,22 +8,22 @@
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/profile"
         android:title="@string/title_profile" />
 
     <item
         android:id="@+id/navigation_explore"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/explore"
         android:title="@string/title_explore" />
 
     <item
         android:id="@+id/navigation_dish"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/dish"
         android:title="@string/title_dish" />
 
     <item
         android:id="@+id/navigation_place_recipe"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/post_recipe"
         android:title="@string/title_place" />
 
 </menu>
