--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgroundDefault">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:paddingTop="16dp"
+        android:paddingLeft="8dp"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Recommendation"
-            android:textColor="#2C3D4E"
-            android:textSize="14sp" />
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recommendation_list"
@@ -27,17 +29,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Healthy for you"
-            android:textColor="#2C3D4E"
-            android:textSize="14sp" />
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/healthy_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/trending_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp" />
@@ -47,8 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Your Favorites"
-            android:textColor="#2C3D4E"
-            android:textSize="14sp" />
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/favorites_list"
@@ -61,8 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Try Specials"
-            android:textColor="#2C3D4E"
-            android:textSize="14sp" />
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/specials_list"
@@ -75,8 +71,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="For your family"
-            android:textColor="#2C3D4E"
-            android:textSize="14sp" />
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/family_list"
