Finish Recipe Detail page

--- a/app/src/main/res/layout/recipe_detail.xml
+++ b/app/src/main/res/layout/recipe_detail.xml
@@ -7,8 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="16dp">
 
         <ImageView
             android:layout_width="match_parent"
@@ -26,18 +26,77 @@
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
-        <android.support.v7.widget.AppCompatRatingBar
-            android:id="@+id/sellerProfileRating"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.AppCompatRatingBar
+                android:id="@+id/sellerProfileRating"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:max="5"
+                android:numStars="5"
+                android:progressTint="@android:color/holo_green_dark"
+                android:rating="4.5"
+                android:secondaryProgressTint="@android:color/holo_green_dark" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:background="@android:color/holo_green_dark"
+                android:paddingBottom="16dp"
+                android:paddingLeft="48dp"
+                android:paddingRight="48dp"
+                android:paddingTop="16dp"
+                android:text="Start Cooking"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+        </RelativeLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Cooking Time"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:max="5"
-            android:numStars="5"
-            android:progressTint="@android:color/holo_green_dark"
-            android:rating="4.5"
-            android:secondaryProgressTint="@android:color/holo_green_dark" />
+            android:text="35 minutes"
+            android:textColor="@color/warmGrayLight"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Benefit (Health)"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/ingredients"
+            android:textColor="@color/warmGrayLight"
+            android:textSize="14sp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -55,22 +114,107 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
             android:text="@string/cooking_steps"
-            android:textColor="@android:color/white"
+            android:textColor="@color/warmGrayLight"
             android:textSize="14sp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:background="@android:color/holo_green_dark"
-            android:paddingBottom="16dp"
-            android:paddingLeft="48dp"
-            android:paddingRight="48dp"
-            android:paddingTop="16dp"
-            android:text="Start Cooking"
+            android:text="Reviews"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/user_1" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.AppCompatRatingBar
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:max="5"
+                    android:numStars="5"
+                    android:progressTint="@android:color/holo_green_dark"
+                    android:rating="5"
+                    android:secondaryProgressTint="@android:color/holo_green_dark" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="By Ashish"
+                    android:textColor="@color/warmGrayLight"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Loved this recipe!! I wouldn't expect the taste will be so delicious just like my grandmother’s food. YUM"
+                    android:textColor="@color/warmGrayLight"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/user_2" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.AppCompatRatingBar
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:max="5"
+                    android:numStars="5"
+                    android:progressTint="@android:color/holo_green_dark"
+                    android:rating="4"
+                    android:secondaryProgressTint="@android:color/holo_green_dark" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="By Zeynep"
+                    android:textColor="@color/warmGrayLight"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="By the time I reach home, I find fresh, warm food recommended by top chef’s aligned to my dietary and taste preferences.  I suggest this to everybody who wants to eat good, healthy food. This platform is helping me to utilize my time efficiently! :D"
+                    android:textColor="@color/warmGrayLight"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
