--- a/app/src/main/res/layout/explore_fragment.xml
+++ b/app/src/main/res/layout/explore_fragment.xml
@@ -50,7 +50,8 @@
             android:id="@+id/global_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="8dp"
+            android:paddingBottom="16dp" />
 
     </LinearLayout>
 </ScrollView>
