--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -7,9 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
+        android:orientation="vertical"
         android:paddingLeft="8dp"
-        android:orientation="vertical">
+        android:paddingTop="16dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -78,7 +78,8 @@
             android:id="@+id/family_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="8dp"
+            android:paddingBottom="16dp" />
 
     </LinearLayout>
 </ScrollView>
